# chinese_clip_rs

./: Cargo.toml  README.md
examples/: benchmark.rs  demo.rs
src/: image.rs  lib.rs  main.rs  text.rs  utils.rs
